Sun Feb  8 16:46:08 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pp.rb (PP::PPMethods::object_address_group): suppress negative
	  sign for higher heap areas.

Sun Feb  8 16:18:27 2004  akira yamada  <akira@ruby-lang.org>

	* test/yaml/test_yaml.rb (YAML_Unit_Tests::test_range_cycle):
	  added tests.

Sun Feb  8 15:51:57 2004  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_file.rb (TestFile::test_fnmatch): added tests for
	  File.fnmatch. [ruby-dev:22815][ruby-dev:22819]

Sun Feb  8 15:41:45 2004  akira yamada  <akira@ruby-lang.org>

	* test/yaml/test_yaml.rb (YAML_Unit_Tests::test_range_cycle):
	  added tests. [ruby-core:02306] [ruby-core:02311]

Sun Feb  8 14:24:35 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (HTTP#request): should not overwrite Connection
	  header. (ruby-bugs:PR#1274)

Sat Feb  8 10:11:21 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (glob_helper): Dir.glob('**/') did not work. [ruby-dev:22832]

Sat Feb  8 00:29:26 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (fnmatch):
	  File.fnmatch('*?', 'a') should return true. [ruby-dev:22815]
	  File.fnmatch('\[1\]' , '[1]') should return true. [ruby-dev:22819]

	* dir.c
	  Did some styles (no change to behavior)

Sat Feb  7 19:56:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb/init.rb (IRB.rc_files): yield possible rc file names.

	* lib/irb/input-method.rb (IRB::ReadlineInputMethod::initialize):
	  load and save history automatically.  [ruby-core:02352]

Fri Feb  6 22:48:16 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb (gen_url): Support
	  https in RDoc hyperlinks

Fri Feb  6 22:41:22 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/pp.rb (PPInspectTest#test_to_s_with_iv): rollback the previous
	  commit.  [ruby-dev:22813]

Fri Feb  6 22:22:50 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/pp.rb (PPInspectTest#test_to_s_with_iv): remove instance